--- a/index.html
+++ b/index.html
@@ -429,10 +429,10 @@
       text-align: center;
     }
 
-    .result-emoji {
+   .result-emoji {
       font-size: 72px;
       margin-bottom: 16px;
-      animation: resultPop 0.5s ease;
+      animation: resultPop 0.5s ease, float 3s ease-in-out 0.5s infinite;
     }
 
     @keyframes resultPop {
